Add "Browse All Collections" button to LatestCollection component; enhance Navbar styling for language selection; update translations in English and Turkish locales.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -13,6 +13,7 @@
   "home": {
     "latestCollections": "LATEST COLLECTIONS",
     "latestCollectionsDesc": "Discover our newest designs, crafted for the season.",
+    "browseAllCollections": "Browse All Collections",
     "bestSellers": "BEST SELLERS",
     "bestSellersDesc": "Our most loved pieces, chosen by customers"
   },
