--- a/frontend/src/i18n/locales/tr.json
+++ b/frontend/src/i18n/locales/tr.json
@@ -13,6 +13,7 @@
   "home": {
     "latestCollections": "YENİ KOLEKSİYONLAR",
     "latestCollectionsDesc": "Mevsim için tasarlanmış en yeni tasarımlarımızı keşfedin.",
+    "browseAllCollections": "Tüm Koleksiyonları Görüntüle",
     "bestSellers": "EN ÇOK SATANLAR",
     "bestSellersDesc": "Müşteriler tarafından seçilen en sevilen parçalarımız"
   },
