Add product type selection to Add and Collection components; update product model and controller to handle product type; enhance translations for product types in English and Turkish locales.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -28,7 +28,28 @@
     "allCollections": "ALL COLLECTIONS",
     "filters": "FILTERS",
     "categories": "CATEGORIES",
+    "men": "Men",
+    "women": "Women",
+    "kids": "Kids",
     "type": "TYPE",
+    "topwear": "Topwear",
+    "bottomwear": "Bottomwear",
+    "winterwear": "Winterwear",
+    "productType": "PRODUCT TYPE",
+    "tShirt": "T-Shirt",
+    "jacket": "Jacket",
+    "sweater": "Sweater",
+    "shoes": "Shoes",
+    "pants": "Pants",
+    "dress": "Dress",
+    "shirt": "Shirt",
+    "jeans": "Jeans",
+    "hoodie": "Hoodie",
+    "shorts": "Shorts",
+    "skirt": "Skirt",
+    "coat": "Coat",
+    "boots": "Boots",
+    "sneakers": "Sneakers",
     "relevant": "Relevant",
     "lowToHigh": "Low to High",
     "highToLow": "High to Low",
