--- a/frontend/src/i18n/locales/tr.json
+++ b/frontend/src/i18n/locales/tr.json
@@ -28,7 +28,28 @@
     "allCollections": "TÜM KOLEKSİYONLAR",
     "filters": "FİLTRELER",
     "categories": "KATEGORİLER",
+    "men": "Erkek",
+    "women": "Kadın",
+    "kids": "Çocuk",
     "type": "TÜR",
+    "topwear": "Üst Giyim",
+    "bottomwear": "Alt Giyim",
+    "winterwear": "Kışlık",
+    "productType": "ÜRÜN TİPİ",
+    "tShirt": "Tişört",
+    "jacket": "Kaban",
+    "sweater": "Kazak",
+    "shoes": "Ayakkabı",
+    "pants": "Pantolon",
+    "dress": "Elbise",
+    "shirt": "Gömlek",
+    "jeans": "Kot Pantolon",
+    "hoodie": "Kapüşonlu",
+    "shorts": "Şort",
+    "skirt": "Etek",
+    "coat": "Palto",
+    "boots": "Bot",
+    "sneakers": "Spor Ayakkabı",
     "relevant": "İlgili",
     "lowToHigh": "Düşükten Yükseğe",
     "highToLow": "Yüksekten Düşüğe",
