Enhance login component: update UI with animations, add password visibility toggle, and improve user experience with localized text for account creation and login prompts. Update English and Turkish translations for new fields and messages.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -127,10 +127,17 @@
   "login": {
     "login": "Login",
     "signUp": "Sign Up",
-    "forgotPassword": "Forgot your password?",
-    "createAccount": "Create an Account",
+    "forgotPassword": "Forgot password?",
+    "createAccount": "Create Account",
     "loginHere": "Login Here",
     "signIn": "Sign In",
+    "welcomeBack": "Welcome Back",
+    "createAccountTitle": "Create Account",
+    "signInToContinue": "Sign in to continue to your account",
+    "joinUs": "Join us and start shopping today",
+    "fullName": "Full Name",
+    "email": "Email",
+    "password": "Password",
     "verificationEmailSent": "Verification email sent! Please check your inbox.",
     "verificationRequired": "Please verify your email address to continue. Check your inbox for the verification link.",
     "resendVerification": "Resend Verification Email",
