--- a/frontend/src/i18n/locales/tr.json
+++ b/frontend/src/i18n/locales/tr.json
@@ -131,6 +131,13 @@
     "createAccount": "Hesap Oluştur",
     "loginHere": "Buradan Giriş Yap",
     "signIn": "Giriş Yap",
+    "welcomeBack": "Tekrar Hoş Geldiniz",
+    "createAccountTitle": "Hesap Oluştur",
+    "signInToContinue": "Hesabınıza devam etmek için giriş yapın",
+    "joinUs": "Bize katılın ve bugün alışverişe başlayın",
+    "fullName": "Ad Soyad",
+    "email": "E-posta",
+    "password": "Şifre",
     "verificationEmailSent": "Doğrulama e-postası gönderildi! Lütfen gelen kutunuzu kontrol edin.",
     "verificationRequired": "Devam etmek için lütfen e-posta adresinizi doğrulayın. Doğrulama bağlantısı için gelen kutunuzu kontrol edin.",
     "resendVerification": "Doğrulama E-postasını Yeniden Gönder",
