Update frontend components to replace asset images with Lucide icons for improved performance and consistency. Add new dependencies for internationalization and icon support in package.json. Enhance cart and wishlist pages with better UI elements and localized text for empty states. Update translations for new cart messages in English and Turkish locales.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -90,6 +90,8 @@
     "myCart": "MY CART",
     "yourCart": "YOUR CART",
     "emptyCart": "Your cart is empty!",
+    "emptyCartDesc": "Looks like you haven't added anything to your cart yet. Start shopping to fill it up!",
+    "startShopping": "Start Shopping",
     "proceedToCheckout": "PROCEED TO CHECKOUT",
     "cartTotals": "CART TOTALS",
     "subtotal": "Subtotal",
