Implement review functionality: add user review text input in RatingModal, update reviewController to include user information with reviews, and enhance Product page to display user initials and reviews. Update English and Turkish translations for review-related messages.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -70,6 +70,9 @@
     "rateProduct": "Rate this product",
     "yourRating": "Your Rating",
     "submitRating": "Submit Rating",
+    "writeReview": "Write a Review (Optional)",
+    "reviewPlaceholder": "Share your experience with this product...",
+    "pleaseSelectRating": "Please select a rating",
     "onlyPurchased": "Only customers who purchased this product can rate it.",
     "loginToRate": "Please login to rate this product.",
     "ratingSubmitted": "Thank you for your rating!",
