--- a/frontend/src/i18n/locales/tr.json
+++ b/frontend/src/i18n/locales/tr.json
@@ -70,6 +70,9 @@
     "rateProduct": "Bu ürünü değerlendirin",
     "yourRating": "Değerlendirmeniz",
     "submitRating": "Değerlendirmeyi Gönder",
+    "writeReview": "Yorum Yazın (İsteğe Bağlı)",
+    "reviewPlaceholder": "Bu ürünle ilgili deneyiminizi paylaşın...",
+    "pleaseSelectRating": "Lütfen bir değerlendirme seçin",
     "onlyPurchased": "Sadece bu ürünü satın alan müşteriler değerlendirebilir.",
     "loginToRate": "Lütfen değerlendirme yapmak için giriş yapın.",
     "ratingSubmitted": "Değerlendirmeniz için teşekkürler!",
