Enhance Orders component: implement tab functionality to switch between active orders and order history. Update UI to display appropriate messages for empty states and improve order filtering logic. Add new translations for active orders and order history in English and Turkish locales.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -121,7 +121,11 @@
     "packing": "Packing",
     "shipped": "Shipped",
     "outForDelivery": "Out for Delivery",
-    "delivered": "Delivered"
+    "delivered": "Delivered",
+    "activeOrders": "Active Orders",
+    "orderHistory": "Order History",
+    "noActiveOrders": "No active orders yet",
+    "noOrderHistory": "No order history yet"
   },
   "profile": {
     "myProfile": "MY PROFILE",
