Add On Sale Products component: implement display of discounted items on the homepage, enhance product filtering by discount in the Collection page, and update translations for on-sale product features in English and Turkish locales.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -23,7 +23,10 @@
     "latestCollectionsDesc": "Discover our newest designs, crafted for the season.",
     "browseAllCollections": "Browse All Collections",
     "bestSellers": "BEST SELLERS",
-    "bestSellersDesc": "Our most loved pieces, chosen by customers"
+    "bestSellersDesc": "Our most loved pieces, chosen by customers",
+    "onSaleProducts": "ON SALE PRODUCTS",
+    "onSaleProductsDesc": "Special discounts on selected items",
+    "viewAllOnSale": "View All On Sale"
   },
   "collection": {
     "allCollections": "ALL COLLECTIONS",
@@ -55,7 +58,9 @@
     "lowToHigh": "Low to High",
     "highToLow": "High to Low",
     "noItemsFound": "No items found",
-    "tryAdjusting": "Try adjusting your search or filters"
+    "tryAdjusting": "Try adjusting your search or filters",
+    "specialOffers": "SPECIAL OFFERS",
+    "onSale": "On Sale"
   },
   "product": {
     "selectSize": "Select Size",
