Add multilingual product descriptions: enhance Add and List components to support English and Turkish descriptions, update backend to handle new description fields, and improve product display logic for better user experience. Additionally, implement description fallback for backward compatibility.

--- a/frontend/src/i18n/locales/tr.json
+++ b/frontend/src/i18n/locales/tr.json
@@ -24,6 +24,7 @@
     "browseAllCollections": "Tüm Koleksiyonları Görüntüle",
     "bestSellers": "EN ÇOK SATANLAR",
     "bestSellersDesc": "Müşteriler tarafından seçilen en sevilen parçalarımız",
+    "viewAllBestSellers": "Hepsini Gör",
     "onSaleProducts": "İNDİRİMDEKİ ÜRÜNLER",
     "onSaleProductsDesc": "Seçili ürünlerde özel indirimler",
     "viewAllOnSale": "Hepsini Gör"
@@ -60,7 +61,8 @@
     "noItemsFound": "Ürün bulunamadı",
     "tryAdjusting": "Arama veya filtrelerinizi ayarlamayı deneyin",
     "specialOffers": "ÖZEL TEKLİFLER",
-    "onSale": "İndirimde"
+    "onSale": "İndirimde",
+    "bestSeller": "En Çok Satan"
   },
   "product": {
     "selectSize": "Beden Seçin",
