--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -24,6 +24,7 @@
     "browseAllCollections": "Browse All Collections",
     "bestSellers": "BEST SELLERS",
     "bestSellersDesc": "Our most loved pieces, chosen by customers",
+    "viewAllBestSellers": "View All Best Sellers",
     "onSaleProducts": "ON SALE PRODUCTS",
     "onSaleProductsDesc": "Special discounts on selected items",
     "viewAllOnSale": "View All On Sale"
@@ -60,7 +61,8 @@
     "noItemsFound": "No items found",
     "tryAdjusting": "Try adjusting your search or filters",
     "specialOffers": "SPECIAL OFFERS",
-    "onSale": "On Sale"
+    "onSale": "On Sale",
+    "bestSeller": "Best Seller"
   },
   "product": {
     "selectSize": "Select Size",
