Add Contact Messages feature: implement ContactMessages page for viewing and managing contact inquiries, including fetching messages, marking them as read/unread, and displaying message details. Update App and Sidebar components for routing and navigation. Enhance backend with contact routes, controller, and model for handling contact submissions and retrieval.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -225,6 +225,44 @@
     "convenienceDesc": "Enjoy a seamless shopping experience with an easy-to-use platform, secure checkout, and fast, reliable delivery.",
     "exceptionalService": "Exceptional Customer Service",
     "exceptionalServiceDesc": "Our support team is always ready to help, ensuring quick responses, clear communication, and customer satisfaction."
+  },
+  "contact": {
+    "contactUs": "CONTACT",
+    "getInTouch": "Get in Touch",
+    "contactDesc": "We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
+    "sendMessage": "Send Message",
+    "sending": "Sending...",
+    "messageSent": "Message sent successfully!",
+    "messageError": "Failed to send message. Please try again.",
+    "name": "Full Name",
+    "email": "Email Address",
+    "phone": "Phone Number",
+    "subject": "Subject",
+    "message": "Message",
+    "namePlaceholder": "Enter your full name",
+    "emailPlaceholder": "Enter your email address",
+    "phonePlaceholder": "Enter your phone number",
+    "subjectPlaceholder": "What is this regarding?",
+    "messagePlaceholder": "Tell us how we can help you...",
+    "required": "Required",
+    "ourStore": "Our Store",
+    "address": "Address",
+    "addressValue": "54709 Willms Station, Suite 350, Washington, USA",
+    "phoneLabel": "Phone",
+    "phoneValue": "(415) 999-3420",
+    "emailLabel": "Email",
+    "emailValue": "admin@forever.com",
+    "businessHours": "Business Hours",
+    "mondayFriday": "Monday - Friday",
+    "saturday": "Saturday",
+    "sunday": "Sunday",
+    "hours": "9:00 AM - 6:00 PM",
+    "closed": "Closed",
+    "followUs": "Follow Us",
+    "socialMedia": "Connect with us on social media",
+    "careers": "Careers at Forever",
+    "careersDesc": "Learn more about our teams and job openings",
+    "exploreJobs": "Explore Jobs"
   }
 }
 
