--- a/frontend/src/i18n/locales/tr.json
+++ b/frontend/src/i18n/locales/tr.json
@@ -225,6 +225,44 @@
     "convenienceDesc": "Kullanımı kolay platform, güvenli ödeme ve hızlı, güvenilir teslimat ile sorunsuz bir alışveriş deneyimi yaşayın.",
     "exceptionalService": "Olağanüstü Müşteri Hizmetleri",
     "exceptionalServiceDesc": "Destek ekibimiz her zaman yardıma hazırdır ve hızlı yanıtlar, net iletişim ve müşteri memnuniyeti sağlar."
+  },
+  "contact": {
+    "contactUs": "İLETİŞİM",
+    "getInTouch": "Bize Ulaşın",
+    "contactDesc": "Sizden haber almak isteriz. Bize bir mesaj gönderin, en kısa sürede yanıtlayacağız.",
+    "sendMessage": "Mesaj Gönder",
+    "sending": "Gönderiliyor...",
+    "messageSent": "Mesaj başarıyla gönderildi!",
+    "messageError": "Mesaj gönderilemedi. Lütfen tekrar deneyin.",
+    "name": "Ad Soyad",
+    "email": "E-posta Adresi",
+    "phone": "Telefon Numarası",
+    "subject": "Konu",
+    "message": "Mesaj",
+    "namePlaceholder": "Adınızı ve soyadınızı girin",
+    "emailPlaceholder": "E-posta adresinizi girin",
+    "phonePlaceholder": "Telefon numaranızı girin",
+    "subjectPlaceholder": "Bu ne hakkında?",
+    "messagePlaceholder": "Size nasıl yardımcı olabileceğimizi bize söyleyin...",
+    "required": "Zorunlu",
+    "ourStore": "Mağazamız",
+    "address": "Adres",
+    "addressValue": "54709 Willms Station, Suite 350, Washington, USA",
+    "phoneLabel": "Telefon",
+    "phoneValue": "(415) 999-3420",
+    "emailLabel": "E-posta",
+    "emailValue": "admin@forever.com",
+    "businessHours": "Çalışma Saatleri",
+    "mondayFriday": "Pazartesi - Cuma",
+    "saturday": "Cumartesi",
+    "sunday": "Pazar",
+    "hours": "09:00 - 18:00",
+    "closed": "Kapalı",
+    "followUs": "Bizi Takip Edin",
+    "socialMedia": "Sosyal medyada bizimle iletişime geçin",
+    "careers": "Forever'da Kariyer",
+    "careersDesc": "Ekibimiz ve iş fırsatlarımız hakkında daha fazla bilgi edinin",
+    "exploreJobs": "İş Fırsatlarını Keşfet"
   }
 }
 
