Add tracking number functionality: implement tracking number input in Orders page, update backend to generate and validate unique tracking numbers, and enhance order model to include tracking number field. Update localization files for tracking number support in English and Turkish.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -132,7 +132,8 @@
     "activeOrders": "Active Orders",
     "orderHistory": "Order History",
     "noActiveOrders": "No active orders yet",
-    "noOrderHistory": "No order history yet"
+    "noOrderHistory": "No order history yet",
+    "trackingNumber": "Tracking Number"
   },
   "profile": {
     "myProfile": "MY PROFILE",
