Add profile statistics and quick actions: implement user statistics display for total and active orders, wishlist and cart counts, enhance profile layout with new UI components, and update localization files for new profile-related terms in English and Turkish.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -146,7 +146,19 @@
     "myWishlist": "My Wishlist",
     "myWishlistDesc": "View your saved items",
     "loading": "Loading...",
-    "failedToLoad": "Failed to load user data"
+    "failedToLoad": "Failed to load user data",
+    "totalOrders": "Total Orders",
+    "activeOrders": "Active Orders",
+    "wishlistItems": "Wishlist Items",
+    "memberSince": "Member Since",
+    "quickActions": "Quick Actions",
+    "accountOverview": "Account Overview",
+    "recentActivity": "Recent Activity",
+    "editProfile": "Edit Profile",
+    "changePassword": "Change Password",
+    "privacySettings": "Privacy Settings",
+    "viewCart": "View Cart",
+    "viewCartDesc": "Check your shopping cart"
   },
   "login": {
     "login": "Login",
